class subject assignment implementation
